[package]
name = "async-light"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "async-light"
harness = false

[features]
default = ["std", "esp-idf-sys/native"]
std = ["esp-idf-sys/std"]

[dependencies]
anyhow = "1"
log = "0.4"
esp-idf-hal = { git = "https://github.com/Kinubi/esp-idf-hal", branch = "esp32p4-fix" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", branch = "master" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", branch = "master" }
fugit = "0.3.9"


[build-dependencies]
embuild = "0.33"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", branch = "master" }
esp-idf-hal = { git = "https://github.com/Kinubi/esp-idf-hal", branch = "esp32p4-fix" }

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_wifi_remote", version = "1.4.0" }
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_hosted", version = "2.11.7" }
